--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "google-auth-library": "^3.1.2",
     "mongodb": "^3.2.2",
     "multer": "^1.4.1"
   },
