--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.4",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "mongodb": "^3.2.2",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
