--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "reset-data": "rm public/uploads/* && mongo trees <<< 'db.dropDatabase()'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "browser-image-compression": "^1.0.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "google-auth-library": "^3.1.2",
     "mongodb": "^3.2.2",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
