--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "multer": "^1.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "superagent": "^5.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "mongo-unit": "^1.4.4",
+    "nodemon": "^1.18.10",
+    "supertest": "^4.0.2"
   }
 }
